--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Madelynsyn - The Learning, Entertainment, and More Pack All in One</title>
+  </head>
+</html>
