--- a/Madelynsyn_Books.html
+++ b/Madelynsyn_Books.html
@@ -26,7 +26,7 @@
         <h1 onclick="home()"><span id="madelyn">Madelyn</span><span id="syn">syn</span>™</h1>   
         <script>
             var home = function() {
-                location.replace("file:///C:/dev/Madelyn/madelyngh.github.io/Madelynsyn.html");
+                location.replace("Madelynsyn.html");
             }
         </script>
     </body>
