--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Madelynsyn - The Learning, Entertainment, and More Pack All in One</title>
+        <title>Madelynsyn™ - The Learning, Entertainment, and More Pack All in One</title>
         <link rel="icon" 
         type="image/png" 
         href="madelynsyn_icon.png" />
